# NovaAdapt

./: .gitignore  LICENSE  MASTER_HANDOFF_ROADMAP.md  Makefile  README.md  pyproject.toml
.novaforge/: REPO_LOCK.json
bridge/: README.md  go.mod
config/: agent_gallery.json  benchmark.example.json  models.example.json  models.sib.example.json
core/: README.md
deploy/: .env.example  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.tailscale.yml  docker-compose.yml
desktop/: README.md
desktop/tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-shell/src-tauri/src/: main.rs
docs/: NOVAAI_MASTER_HANDOFF.md  android_play_publish.md  architecture.md  benchmarks.md  channel_security_matrix.md  demo_runbooks.md  directshell_runtime.md  licensing.md  migration_guide.md  realtime_protocol.md  release.md  tailscale.md
installer/: bootstrap_desktop.sh  build_bridge_go.sh  build_release_artifacts.sh  gen_dev_tokens.sh  install_launchd_services.sh  install_services.sh  install_systemd_services.sh  rotate_tokens.sh  run_docker_stack.sh  run_local_operator_stack.sh
mobile/: README.md
results/: benchmark.json
scripts/: build_android_shell.sh  check_clients.sh  codex_resume.sh  configure_android_github_secrets.sh  demo_iot_swarm.sh  demo_mobile_banking.sh  demo_vision_desktop.sh  package_play_store_kit.sh  publish_benchmarks.sh  smoke_bridge.sh  smoke_browser.sh  smoke_runtime.py  smoke_runtime.sh
shared/: README.md
tests/: test_adapt_layer.py  test_agent.py  test_agent_gateway.py  test_agent_templates.py  test_api_client.py  test_audit_store.py  test_backup.py  test_benchmark.py  test_bridge.py  test_browser_executor.py  test_canvas.py  test_cleanup.py  test_cli_adapt.py  test_cli_bridge_admin.py  test_cli_channels.py  test_cli_doctor.py  test_cli_gateway.py  test_cli_novaprime.py  test_jobs.py  (+39 more)
(+228 files in other folders)
