[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novaadapt"
version = "0.1.0"
description = "NovaAdapt desktop-first MVP with model-agnostic routing and DirectShell orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
litellm = ["litellm>=1.61.0"]
observability = [
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.scripts]
novaadapt = "novaadapt_core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["core", "shared"]
