[package]
name = "novaadapt_desktop"
version = "0.1.0"
description = "NovaAdapt desktop Tauri shell"
authors = ["NovaAdapt"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2", features = [] }

[features]
default = []
